converted the MapsAPI to using the built-in HTTPClient Java provides.