@@ -4,41 +4,46 @@ import org.json.JSONObject;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.time.Duration;
 import java.util.Scanner;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+
+import static java.time.temporal.ChronoUnit.SECONDS;
+
 // DISTANCE API
 public class MapsAPI {
     private static final String MAPS_KEY = System.getenv("MAPS_KEY"); // Google Distance Matrix API key
 
     private static final String DELIMITER = "%20";
 
-    /**
-     * @param o
-     * @param d
-     * @return distance in kilometers
-     */
-    public static double getDistance(String o, String d) {
-        String link = "https://maps.googleapis.com/maps/api/distancematrix/json?units=imperial&origins=" + format(o) + "&destinations=" + format(d) + "&key=" + MAPS_KEY;
+    public static double fetchDistance(String origin, String destination) {
+
         try {
-            URL url = new URL(link);
+            final HttpRequest req = HttpRequest.newBuilder()
+                    .uri(new URI("https://maps.googleapis.com/maps/api/distancematrix/json?units=imperial&origins=" + format(origin) + "&destinations=" + format(destination) + "&key=" + MAPS_KEY))
+                    .timeout(Duration.of(10, SECONDS))
+                    .GET()
+                    .build();
 
-            BufferedReader reader = new BufferedReader(new InputStreamReader(url.openStream())); // creates a BufferedReader that can read our URL
-            StringBuilder response = new StringBuilder();
-            String line;
-            while ((line = reader.readLine()) != null) {
-                response.append(line);
-            }
-            reader.close();
-            JSONObject obj = new JSONObject(response.toString());
-            JSONArray rows = obj.getJSONArray("rows");
-            JSONObject element = rows.getJSONObject(0);
-            String distString = element.getJSONArray("elements").getJSONObject(0).getJSONObject("distance").get("text").toString();
-            double distance = parseDouble(distString);
-            return distance;
+            final HttpResponse<String> response = HttpClient
+                    .newBuilder()
+                    .build()
+                    .send(req, HttpResponse.BodyHandlers.ofString());
 
-        } catch (Exception e) {
+            final JSONObject body = new JSONObject(response.body());
+            String distance = body.getJSONArray("rows").getJSONObject(0)
+                    .getJSONArray("elements").getJSONObject(0).getJSONObject("distance").get("text").toString();
+            System.out.println(distance);
+
+            return parseDouble(distance);
+
+        }catch(Exception e) {
             e.printStackTrace();
         }
 
